added all alphabets (16th notes) and added randomiser

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/panarch/react-native-vexflow-seed#readme",
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "15.4.2",
     "react-dom": "^15.4.2",
     "react-native": "0.40.0",
