--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.4.2",
     "react-native": "0.40.0",
     "react-native-svg": "^5.1.4",
+    "react-native-vector-icons": "^4.0.0",
     "standalone-vexflow-context": "^0.1.0",
     "vexflow": "^1.2.83"
   },
