--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "15.4.2",
     "react-dom": "^15.4.2",
     "react-native": "0.40.0",
+    "react-native-settings-list": "^1.3.3",
     "react-native-svg": "^5.1.4",
     "react-native-vector-icons": "^4.0.0",
     "standalone-vexflow-context": "^0.1.0",
